--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -27,10 +27,15 @@
 @mixin input(){
   border-radius: 1rem;
   padding: 0.5rem;
-
+  overflow: hidden;
   font-size: 1rem;
-  min-width: 100%;
+  width: 100%;
   resize: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+
+  &:focus{
+    box-shadow: 0 0 10px rgba(93, 93, 93, 0.51);
+  }
 }
 
 
