--- a/src/components/previewModal/previewModal.module.scss
+++ b/src/components/previewModal/previewModal.module.scss
@@ -1,7 +1,7 @@
-@import "./../styles/_mixin.scss";
+@import "../../styles/mixin";
 
 .container {
-  background: rgba(128, 128, 128, 0.4);
+  background: rgb(128 128 128 / 40%);
   position: fixed;
   width: 100%;
   height: 100%;
@@ -13,30 +13,37 @@
   justify-content: center;
 
 }
+
 .wrapper{
   @include flex(column, center, center);
+
   background-color: white;
   padding: 1.5rem;
   gap: 1rem;
   border-radius: 1rem;
   max-width: 1500px;
 }
+
 .inputBlock{
   border: 1.5px solid #056a3f;
   padding: 0.2rem;
   border-radius: 0.7rem;
 }
+
 .btn{
-  @include button();
+  @include button;
 }
+
 .input{
   border: none;
 }
+
 .content{
   border: 2px solid #056a3f;
   border-radius: 0.7rem;
-  padding: 0.5rem;
+  padding: 1rem;
 }
+
 .variablesBlock{
   display: grid;
   grid-template-columns: 1fr 1fr;
