--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -4,6 +4,7 @@
   align-items: center;
   flex-direction: column;
 }
+
 @mixin flex($flex-direction, $align-item, $justify-content) {
   display: flex;
   flex-direction: $flex-direction;
@@ -19,11 +20,13 @@
   font-weight: bold;
   border-radius: 1rem;
   transition: 0.3s;
+  font-size: 1rem;
 
   &:hover{
     background-color: #034d2d;
   }
 }
+
 @mixin input(){
   border-radius: 1rem;
   padding: 0.5rem;
@@ -31,10 +34,10 @@
   font-size: 1rem;
   width: 100%;
   resize: none;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 5px rgb(0 0 0 / 15%);
 
   &:focus{
-    box-shadow: 0 0 10px rgba(93, 93, 93, 0.51);
+    box-shadow: 0 0 10px rgb(93 93 93 / 51%);
   }
 }
 
